--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid -->
+    <!-- Escorts Grid -->
     <section class="bg-light" id="featured">
       <div class="container">
         <div class="row">
@@ -163,7 +163,7 @@
       </div>
     </section>
 
-    <!-- About -->
+    <!-- Apply -->
     <section id="apply">
       <div class="container">
         <div class="row">
