--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Social Security Number *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="phone" type="tel" placeholder="Your Social Security Number *" required data-validation-required-message="Please enter your social security number.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
