Try to be responsive

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="portfolio-caption">
               <h4>Nusret</h4>
               <p class="text-muted">He's sexy. He's suave. He's #SaltBae.</p>
-              <p class="text-muted"></br>He's willing to intrigue everybody at your event in exchange for a a steak dinner and at least 15 new followers on his Instagram by the end of the night.</p>
+              <p class="text-muted">He's willing to intrigue everybody at your event in exchange for a a steak dinner and at least 15 new followers on his Instagram by the end of the night.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -156,7 +156,7 @@
             <div class="portfolio-caption">
               <h4>Steve</h4>
               <p class="text-muted">Also known as "Weezy B", you can't get much cooler than Steve. He spits fire on his not-so-recent mixtape "Ma Gangsta". Fun fact: the cover of the album was taken by his Ma, so the album is actually about his mother. How sweet!</p>
-              <p class="text-muted"></br>Want Steve to impress everyone with his Hip Hop skills and swag? Just buy him shots. All night. </p>
+              <p class="text-muted">Want Steve to impress everyone with his Hip Hop skills and swag? Just buy him shots. All night. </p>
             </div>
           </div>
         </div>
